themes/skins/niecalumni.css
/* ... */
.forgot-password a {
color: #5fcf80;
display: block;
overflow: hidden;
float: right;
font-style: italic;
font-size: 12px;
margin-top: 10px;
margin-bottom: 20px;
}
/*}*/
.forgot-password a:hover {
color: #58b316;
}



.welcome-captcha img {
vertical-align: bottom;
border-radius: 5px;
margin-right: 5px;
}
.welcome-full {
width: 100%;
background: #f6f7f8;
}
.welcome-inner {
padding: 10px;
overflow: hidden;
}
.welcome-user {
width: 70px;
height: 70px;
float: left;
border: 5px solid #fff;
border-radius: 5px;
margin-right: 11px;
box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
margin-top: 5px;
-webkit-transition: -webkit-transform .1s;
-moz-transition: -moz-transform .1s;
transition: transform .1s;
}
.welcome-user:hover{
z-index: 1;
/*border:none;*/
background: #fff;
border-radius: 3px;
-webkt-box-shadow: 0px 1px 10px rgba(0,0,0,5),1px 0px 10px rgba(0,0,0,0.5);
-moz-box-shadow: 0px 1px 10px rgba(0,0,0,5),1px 0px 10px rgba(0,0,0,0.5); 
box-shadow: 0px 1px 10px rgba(0,0,0,5),1px 0px 10px rgba(0,0,0,0.5);
-webkit-transform:scale(1.1);
-moz-transform:scale(1.1);
transform:scale(1.1);
}
.welcome-users{
overflow: hidden;
display: block;
width: 100%;
    min-height: 100px;
padding: 5px;
margin: 0 auto;
}

.welcome-user:last-child {
margin-right: 0;
}
.welcome-user a {
float: left;
height: 70px;
overflow: hidden;
}
.welcome-user img {
width: 70px;
height: 70px;
}
.welcome-message {
float: left;
text-align: left;
width: 69%;
display: block;
color: #000;
font-family: "wf_SegoeUILight","wf_SegoeUI","Segoe UI Light","Segoe WP Light","Segoe UI","Segoe","Segoe WP","Tahoma","Verdana","Arial","sans-serif";
}
.welcome-title {
font-weight: 400;
font-size: 24px;
margin-top: 0px;
text-shadow: 0 2px 1px rgba(0,0,0,.2);
font-family: 'Lato',sans-serif;
margin-top: 20px;
}
.welcome-desc {
font-weight: 400;
font-size: 24px;
text-shadow: 0 2px 1px rgba(0,0,0,.2);
font-family: 'Lato',sans-serif;
color: #3ac162;
}
.welcome-about {
font-weight: 100;
font-size: 64px;
margin-top: 20px;
margin-bottom: 50px;
text-shadow: 0 2px 1px rgba(0,0,0,.2);
font-family: 'Lato',sans-serif;
}
.welcome-inputs {
width: 31%;
float: right;
margin: 0 auto;
}

.verify-inputs {
width: 50%;
float: right;
margin: 0 auto;
}
.welcome-inputs form {
padding: 10px;
width: 100%;
max-width: 245px;
overflow: hidden;
float: none;
margin: 0 auto;
}

.verify form{
max-width: 380px;

}

.welcome-inputs input {
width: 100%;
height: 35px;
color: #595959;
border: none;
outline: 0;
-moz-box-sizing: border-box;
-webkit-box-sizing: border-box;
box-sizing: border-box;
font-family: 'Segoe UI', Tahoma, Verdana, Arial, sans-serif;
background: #fffffa;
border-radius: 3px;
overflow: auto;
border: none;
font-size: 12px;
box-shadow: none;
}
.welcome-inputs input:focus {
background: #f6f7f8;
}
.welcome-inputs input[type="checkbox"] {

}
.register-button {
font-family: 'Segoe UI', Arial, Tahoma, sans-serif;
padding: 0 17px;
background: #3f8abf;
outline: 0;
height: 37px;
border-bottom: 1px solid #2e6186;
text-shadow: 0 -1px 0 rgba(0,0,0,.25);
box-shadow: 0 2px 0px #326e99;
text-transform: none;
cursor: pointer;
border: none;
color: #FFF !important;
border-radius: 3px;
-webkit-border-radius: 3px;
-moz-border-radius: 5px;
display: inline;
font-weight: bold;
font-size: 15px;
width: 65%;
margin-right: 0;
}
.register-button:hover {
background: #326e99;
}
.register-button:active {
background: #326e99;
}
.sidebut{
float: right;
width: 95px;    
}
.login-button {
text-transform: none;
font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
cursor: pointer;
margin-top: 10px;
color: #FFF !important;
border-radius: 3px;
-webkit-border-radius: 3px;
-moz-border-radius: 3px;
padding: 0px 10px;
font-size: 15px;
display: inline;
font-weight: bold;
width: 100%;
margin-right: 0;
border-bottom: 1px solid #3b960c;
text-shadow: 0 -1px 0 rgba(0,0,0,.25);
background: #3ac162;/*#5fc526;*/
box-shadow:  0 2px 0 #3ac162;
}
.login-button:hover {
background: #3ac162;
box-shadow:  0 2px 0 #5fc526;
}
.login-button:active {
background: #3ac162;
border-bottom: none;
}
}
.notification-box {
padding: 5px 10px 10px 10px;
border: 0px solid;
position: relative;
margin: 10px 20px;
color: #fff;
}
.box-transparent {
padding: 5px 10px 10px 10px;
margin: 0 0 5px 0;
color: #fff;
border-radius: 5px;
}
.notification-box p {
margin: 0;
}
.notification-box h5 {
font-size: 20px;
margin: 0;
font-family: 'Lato',sans-serif;
font-weight: 100px;
}
.notification-box-error {
background: #444;
}
.notification-box-success {
background: #444;
}
.notification-box-info {
background: #444;
}
.notification-box-transparent {
background: #384047;
margin-bottom: 10px;
}
.notification-box > p:first-child {
margin: 0;
}
a.notification-close {
padding: 2px 7px 5px 7px;
position: absolute;
right: 5px;
top: 5px;
text-decoration: none !important;
font-weight: bold;
font-size: 14px;
line-height: normal;
color: #3ac162;
}
a.close-transparent {
right: 3px;
top: 3px;
border-radius: 3px;
color: #3ac162;
}
a:hover.notification-close {
background-color: rgba(0, 0, 0, .12);
}
a:active.notification-close {
background-color: rgba(0, 0, 0, .52);
}
.notification-container {
max-width: 900px;
width: 100%;
display: none;
top: 66px;
position: absolute;
}
.notification-content {
background: rgba(255,255,255,.95);
border-bottom-left-radius: 0px;
border-bottom-right-radius: 0px;
/*border: 1px solid #BFBFBF;*/
max-width: 350px;
width: 100%;
border-radius: 3px;
float: right;
color: #fafafa;
border: none;
box-shadow: 0 0 1px rgba(0, 0, 0, .25), 0 1px 5px 3px rgba(0, 0, 0, .05), 0 5px 4px -3px rgba(0, 0, 0, .06);
-moz-box-shadow: 0 0 1px rgba(0, 0, 0, .25), 0 1px 5px 3px rgba(0, 0, 0, .05), 0 5px 4px -3px rgba(0, 0, 0, .06);
-webkit-box-shadow: 0 0 1px rgba(0, 0, 0, .25), 0 1px 5px 3px rgba(0, 0, 0, .05), 0 5px 4px -3px rgba(0, 0, 0, .06);
}
/* ... */

